# data-mining-mp1

./: README.md  mp1.ipynb  pyproject.toml
data/: data1.csv  decoded.csv
src/mp1/: __init__.py  main.py
