[project]
name = "mp1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "vKenjo", email = "blasingkennviray@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
mp1 = "mp1:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
